# OralCancer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: keep-awake.yml
app/: .gitignore  main.py
app/agents/: nodes.py
app/components/: image_upload.py  results_display.py  sidebar.py
app/model/: predictor.py
app/utils/: prompts.py
config/: config.yaml
models/: .gitkeep
scripts/: download_model.py  run_local_model_test.py
