[project]
name = "oral-cancer-ai"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "cohere>=5.0.0",
    "huggingface-hub>=0.20.0",
    "langchain==0.3.26",
    "langchain-cohere>=0.1.0",
    "langgraph>=0.0.20",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "streamlit>=1.31.0",
    "tensorflow>=2.15.0",
    "torch>=2.10.0",
    "transformers>=4.36.0",
]
